--- a/novoken-site/app/landing.css
+++ b/novoken-site/app/landing.css
@@ -95,7 +95,8 @@ a {
 .nk-wordmark {
   font-weight: 650;
   letter-spacing: 0.08em;
-  font-size: 0.92rem;
+  margin-left: -150px;
+  font-size: 1.4rem;
   text-transform: uppercase;
 }
 
